# rpi_hardware_interface

./: .gitignore  LICENSE  README.md
camera_effector/: CMakeLists.txt  package.xml  setup.py
camera_effector/config/: camera_effector.yaml  servo_controller.yaml
camera_effector/include/: camera_effector.h
camera_effector/include/camera_effector/: camera_effector.h
camera_effector/include/camera_effector_teleop/: camera_effector_teleop.h
camera_effector/launch/: camera_effector.launch  camera_effector_teleop.launch
camera_effector/scripts/camera_effector/: CameraEffector.py  ServoController.py  camera_effector_node.py  transform_test.py
camera_effector/src/: camera_effector.cpp  camera_effector_node.cpp
camera_effector/src/camera_effector_teleop/: camera_effector_teleop.cpp
camera_effector_teleop/: CMakeLists.txt  package.xml
camera_effector_teleop/src/: camera_effector_teleop.cpp
data/flir_lepton/: dataset_spline_interp.pandora
flir_lepton/: CMakeLists.txt  package.xml
flir_lepton/config/: params.yaml
flir_lepton/include/flir_lepton/: flir_lepton.h  utils.h
flir_lepton/launch/: flir_lepton.launch
flir_lepton/src/: flir_lepton.cpp  flir_lepton_node.cpp
flir_lepton_hardware_interface/: CMakeLists.txt  package.xml
flir_lepton_hardware_interface/config/: params.yaml
flir_lepton_hardware_interface/config/flir_lepton_hardware_interface/: params.yaml
flir_lepton_hardware_interface/include/flir_lepton_hardware_interface/: flir_lepton_hardware_interface.h
flir_lepton_hardware_interface/launch/: flir_lepton.launch  flir_lepton_raspberry.launch
flir_lepton_hardware_interface/msg/: flirLeptonMsg.msg
flir_lepton_hardware_interface/scripts/: dataset05.pandora  produce_dataset.py
flir_lepton_hardware_interface/src/: flir_lepton_hardware_interface.cpp  flir_lepton_hardware_interface_node.cpp
ledstrip_controller/: CMakeLists.txt  package.xml  setup.py
ledstrip_controller/cfg/: ledstrip_controller.cfg
ledstrip_controller/config/: params.yaml
ledstrip_controller/launch/: ledstrip_controller.launch
ledstrip_controller/scripts/ledstrip_controller/: ledstrip_controller.py
ledstrip_switch/: CMakeLists.txt  package.xml
ledstrip_switch/scripts/: ledstrip_switch.py
pi_camera/: CMakeLists.txt  package.xml
pi_camera/config/: params.yaml
pi_camera/launch/: pi_camera.launch
pi_camera/scripts/pi_camera/: PiCameraRosWrapper.py  pi_camera_interface.py  pi_camera_node.py  test.py
pi_camera/scripts/pi_camera/pi_camera_interface/: pi_camera_interface.py
raspicam_wrapper/: CMakeLists.txt  package.xml
raspicam_wrapper/config/: raspicam_params.yaml
raspicam_wrapper/launch/: raspicam.launch  raspicam_wrapper.launch
raspicam_wrapper/src/: raspicam_wrapper_node.cpp
rpi_hardware_interface/: CMakeLists.txt  package.xml
scripts/: pc_ros_network_config.sh  raspberry_env.sh  rpi_ros_network_config.sh  thermal_interp.py
