<package format="2">
  <name>camera_effector_teleop</name>
  <version>0.0.0</version>
  <description>The camera_effector_teleop package</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/klpanagi/rpi_hardware_interface/issues</url>
  <url type="repository">https://github.com/klpanagi/rpi_hardware_interface.git</url>

  <author email="klpanagi@gmail.com">Konstantinos Panayiotou</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>message_generation</build_depend>-->
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>boost</depend>


  <export>

  </export>
</package>
