<package format="2">
  <name>flir_lepton</name>
  <version>0.0.0</version>
  <description>The flir_lepton package</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/klpanagi/rpi_hardware_interface/issues</url>
  <url type="repository">https://github.com/klpanagi/rpi_hardware_interface.git</url>

  <author email="klpanagi@gmail.com">Konstantinos Panayiotou</author>
  <author email="tsirif@gmail.com">Tsirigotis Christos</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
