<package format="2">
  <name>raspicam_wrapper</name>
  <version>0.0.1</version>
  <description>The raspicam wrapper package</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/klpanagi/rpi_hardware_interface/issues</url>
  <url type="repository">https://github.com/klpanagi/rpi_hardware_interface.git</url>

  <author email="klpanagi@gmail.com">Konstantinos Panayiotou</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>raspicam</depend>

  <export>

  </export>

</package>
